# industrial_manipulator

./: README.md
cad_data/: RobotArm5.SLDASM
cad_data/4axis_RobotArm_origin/: 4axis_RobotArm.SLDASM  link1.SLDASM  link4_2.SLDASM  link5.SLDASM  linkframe1.SLDPRT  linkframe1_2.SLDPRT  linkframe2.SLDPRT  linkframe2_1.SLDPRT
cad_data/4axis_RobotArm_origin/fr12-h104(stp)/: fr12-h104.SLDPRT
cad_data/4axis_RobotArm_origin/fr12_h101(stp)/: ÆÄÆ®3.sldprt
cad_data/4axis_RobotArm_origin/fr12_s101(stp)/: fr12_s101.SLDPRT
cad_data/4axis_RobotArm_origin/fr12_s102(stp)/: fr12_s102.SLDPRT  fr12_s102.stp
cad_data/4axis_RobotArm_origin/x-430_idle(stp)/: X-430_CVR_CABLE.sldprt  X-430_IDLE.sldprt  x-430_idle.SLDASM
cad_urdf_data/: CMakeLists.txt  package.xml
cad_urdf_data/launch/: display.launch  gazebo.launch
cad_urdf_data/meshes/: link5.STL
cad_urdf_data/urdf/: RobotArm7.urdf
manipulator_ver1/cad_data/: RobotArm3.SLDASM
manipulator_ver1/cad_data/4axis_RobotArm_origin/: Fix_floor.SLDPRT  link2.SLDASM  link3.SLDASM  link3_2.SLDASM  link4.SLDASM  link5_2.SLDASM  linkframe2_2.SLDPRT
manipulator_ver2/cad_data/: 4axis_robotarm2_MG946R.SLDASM  HN1_MG946R.sldprt  HN1_MR946R.SLDASM  arm2_link1.SLDASM  arm2_link2.SLDASM  arm2_link3.SLDASM  arm2_link4.SLDASM  arm2_link5.SLDASM  frame1.sldprt  frame2.sldprt  frame3.sldprt  frame4.sldprt  frame5.sldprt  frame6.sldprt  mg946r.SLDPRT
manipulator_ver2/cad_urdf_data/: CMakeLists.txt  package.xml
ros_data/meshes/: chain_link1.stl  chain_link4.stl
ros_data/urdf/: open_manipulator.urdf.xacro
(+20 files in other folders)
